practice-k8s/services-networking/expose-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: foo
  name: foo
spec:
  ports:
  - port: 6262
    protocol: TCP
    targetPort: 8080
  selector:
    app: foo
  type: ClusterIP
status:
  loadBalancer: {}
